--- a/prefeitura.html
+++ b/prefeitura.html
@@ -53,14 +53,14 @@
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/vice-douglas.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Douglas Marchetti</span>
-                                        <p class="node-label-cargo">VICE-PRESIDENTE</p>
-                                    </a>
-                                    <a href="#" class="node-link coordenador">
                                         <img src="imagens/pref-edson.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">EDSON JOSÉ BONA</span>
                                         <p class="node-label-cargo">PRESIDENTE</p>
+                                    </a>
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/vice-douglas.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Douglas Marchetti</span>
+                                        <p class="node-label-cargo">VICE-PRESIDENTE</p>
                                     </a>
                                     <ul class="funcionarios">
                                         <li class="tree-node">
@@ -246,20 +246,23 @@
                                     </li>
                                 </ul>
                             </li>
-                </li>
-            </ul>
-            </ul>
+                        </li>
+                    </ul>
+                </ul>
             <div class="tree">
                 <ul class="tree-children">
                     <div class="setor-separado">
-                        <ul class="tree-root">
-                            <li class="tree-node">
-                                <a href="#" class="node-link setor">
+                        <ul class="tree-root-dif">
+                            <li class="tree-node-dif">
+                                <a href="index.html" class="node-link setor-dif">
                                     <img src="imagens/simplifica.png" alt="New Setor Image" class="node-image">
                                     <span class="node-label">Simplifica Timbó</span>
                                 </a>
                         </ul>
                         <div class="line"></div>
+                        <div class="line-second"></div>
+                        <div class="line-third"></div>
+                        <div class="line-fourth"></div>
                 </ul>
             </div>
             </li>
