--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         <ul class="coordenadores">
                             <li class="tree-node">
                                 <a href="#" class="node-link coordenador">
-                                    <img src="imagens/silvana.jpg" alt="Coordenador Image" class="node-image">
+                                    <img src="imagens/silvana.png" alt="Coordenador Image" class="node-image">
                                     <span class="node-label">Silvana</span>
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
@@ -518,7 +518,7 @@
                         <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link funcionario">
-                                    <img src="imagens/chantelli.jpg" alt="Coordenador Image" class="node-image">
+                                    <img src="imagens/chantelli.png" alt="Coordenador Image" class="node-image">
                                     <span class="node-label">Chantelli</span>
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
@@ -1086,7 +1086,7 @@
                         <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link funcionario">
-                                    <img src="imagens/chantelli.jpg" alt="Coordenador Image" class="node-image">
+                                    <img src="imagens/chantelli.png" alt="Coordenador Image" class="node-image">
                                     <span class="node-label">Chantelli</span>
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
