--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="titulo-page">
         <h1>Organograma - Simplifica Timbó</h1>
-        <h2>Feito por Henrique</h2>
+        <h2>Feito por Henrique J. D. Pereira</h2>
     </div>
 
     <button id="reload-btn" title="Recarregar página">
