--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                                         </a>
                                     <li class="tree-node-matutino">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                            <img src="imagens/julia-peyerl.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Júlia</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             <p class="node-label-cargo">Matutino</p>
