--- a/prefeitura.html
+++ b/prefeitura.html
@@ -65,49 +65,56 @@
                                     <ul class="funcionarios">
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Djonathan.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/Djonathan.jpg" alt="Employee Image"
+                                                    class="node-image">
                                                 <span class="node-label">Djonathan</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/adriano-jose.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/adriano-jose.jpg" alt="Employee Image"
+                                                    class="node-image">
                                                 <span class="node-label">Adriano</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Rubens-Borchardt.jpeg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/Rubens-Borchardt.jpeg" alt="Employee Image"
+                                                    class="node-image">
                                                 <span class="node-label">Rubens</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Haroldo-Fiebes.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/Haroldo-Fiebes.jpg" alt="Employee Image"
+                                                    class="node-image">
                                                 <span class="node-label">Haroldo</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Carlos-Adriano-Krüger.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/Carlos-Adriano-Krüger.jpg" alt="Employee Image"
+                                                    class="node-image">
                                                 <span class="node-label">Carlos</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Gilmara-Maria-Baddaratz-Giotti.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/Gilmara-Maria-Baddaratz-Giotti.jpg"
+                                                    alt="Employee Image" class="node-image">
                                                 <span class="node-label">Gilmara</span>
                                                 <p class="node-label-cargo">VEREADORA</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Flávio-Germano-Buzzi.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/Flávio-Germano-Buzzi.jpg" alt="Employee Image"
+                                                    class="node-image">
                                                 <span class="node-label">Flávio</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
@@ -245,9 +252,9 @@
                                     </li>
                                 </ul>
                             </li>
-                        </li>
-                    </ul>
-                </ul>
+                </li>
+            </ul>
+            </ul>
             <div class="tree">
                 <ul class="tree-children">
                     <div class="setor-separado">
