--- a/index.html
+++ b/index.html
@@ -1226,9 +1226,8 @@
                             </li>
                         </ul>
                     </li>
-                </ul>
-                </li>
-                <!--IDENTIDADE-->
+                    <!--IDENTIDADE-->
+                    <!--GOV.BR-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="imagens/gov.br.png" alt="Setor Image" class="node-image">
@@ -1254,6 +1253,7 @@
                         </li>
                     <ul>
                 </li>
+                <!--GOV.BR-->
             </ul>
             </li>
             </ul>
