--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@
                                     </li>
                                     <li class="tree-node-vespertino">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/rafaela.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/Rafael.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Rafael</span>
                                             <p class="node-label-cargo">ESTAGIÁRIO</p>
                                             <p class="node-label-turno">Vespertino</p>
