--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                     <p class="node-label-turno">Matutino</p>
                                 </a>
                             </li>
-                            <li class="tree-node-matutino"></li>
+                            <li class="tree-node-matutino">
                                 <a href="#" class="node-link">
                                     <img src="imagens/maycon.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Maycon</span>
@@ -504,7 +504,7 @@
                                                     <p class="node-label-turno">Vespertino</p>
                                                 </a>
                                             </li>
-                                            <li class="tree-node-vespertino">>
+                                            <li class="tree-node-vespertino">
                                                 <a href="#" class="node-link">
                                                     <img src="imagens/Giulia.jpg" alt="Employee Image"
                                                         class="node-image">
