mod: enzo, retirar adna e bryan

--- a/index.html
+++ b/index.html
@@ -479,14 +479,6 @@
                                         <ul class="sub-funcionarios">
                                             <li class="tree-node-matutino">
                                                 <a href="#" class="node-link">
-                                                    <img src="imagens/adna.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Adna</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                    <p class="node-label-turno">Matutino</p>
-                                                </a>
-                                            </li>
-                                            <li class="tree-node-matutino">
-                                                <a href="#" class="node-link">
                                                     <img src="imagens/laiza-barros.jpg" alt="Employee Image"
                                                         class="node-image">
                                                     <span class="node-label">Laiza</span>
@@ -588,7 +580,7 @@
                                                 <a href="#" class="node-link">
                                                     <img src="imagens/enzo matheus.jpg" alt="Employee Image"
                                                         class="node-image">
-                                                    <span class="node-label">Leonardo</span>
+                                                    <span class="node-label">Enzo</span>
                                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     <p class="node-label-turno">Vespertino</p>
                                                 </a>
@@ -983,7 +975,7 @@
                                             <img src="imagens/bryan.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Bryan</span>
                                             <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                            <p class="node-label-turno">Matutino</p>
+                                            <p class="node-label-turno">Vespertino</p>
                                         </a>
                                     </li>
                                 </ul>
