--- a/prefeitura.html
+++ b/prefeitura.html
@@ -41,13 +41,13 @@
                     <ul class="coordenadores">
                         <li class="tree-node">
                             <a href="#" class="node-link coordenador">
-                                <img src="imagens/pref-jorge.jpg" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">JORGE KRUEGER</span>
+                                <img src="imagens/flavio-buzzi.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Flávio G. Buzzi</span>
                                 <p class="node-label-cargo">PREFEITO</p>
                             </a>
                             <a href="#" class="node-link coordenador">
-                                <img src="imagens/vice-guilherme.jpg" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">Guilherme V. Junior</span>
+                                <img src="imagens/rangel-vice.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Rangel D. Bonatti</span>
                                 <p class="node-label-cargo">VICE-PREFEITO</p>
                             </a>
                             <ul class="funcionarios">
@@ -134,9 +134,9 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/sec-alfoh.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Alfroh Postai</span>
-                                            <p class="node-label-cargo">SECRETÁRIO</p>
+                                            <img src="imagens/mayra-educação.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Mayra Elaine Milke Cipriani</span>
+                                            <p class="node-label-cargo">SECRETÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -149,9 +149,9 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/sec-maria.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Maria A. Faggiani</span>
-                                            <p class="node-label-cargo">SECRETÁRIA</p>
+                                            <img src="imagens/joao-fazenda.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">João Luiz Merini Moser</span>
+                                            <p class="node-label-cargo">SECRETÁRIO</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -165,9 +165,9 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/sec-luiz.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Luiz C. G. Alves Junior</span>
-                                            <p class="node-label-cargo">SECRETÁRIO</p>
+                                            <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Nicoli Padilha Kloch</span>
+                                            <p class="node-label-cargo">SECRETÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -185,8 +185,8 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/sec-adilson.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Adilson Mesch</span>
+                                            <img src="imagens/eduardo-obras.png" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Eduardo Nau</span>
                                             <p class="node-label-cargo">SECRETÁRIO</p>
                                         </a>
                                     </li>
@@ -205,9 +205,9 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/none.png" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Giscard A. W. Bertoldi</span>
-                                            <p class="node-label-cargo">SECRETÁRIO</p>
+                                            <img src="imagens/fabiana-procuradoria.png" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Fabiana Nogara Kurten Siega</span>
+                                            <p class="node-label-cargo">SECRETÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -225,9 +225,9 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/sec-alfredo.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Alfredo João Berri</span>
-                                            <p class="node-label-cargo">SECRETÁRIO</p>
+                                            <img src="imagens/joice-saude.png" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Joice Stollmeier Kroenke</span>
+                                            <p class="node-label-cargo">SECRETÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
